# taller-mecanico-solana

./: .gitignore  README.md
.devcontainer/: devcontainer.json  install.sh
api/: .gitignore  Anchor.toml  README.md  package-lock.json  package.json
api/migrations/: deploy.ts
api/programs/taller_mecanico/: Cargo.toml
api/programs/taller_mecanico/src/: errors.rs  lib.rs
api/programs/taller_mecanico/src/instructions/: mod.rs
api/programs/taller_mecanico/src/instructions/cliente/: mod.rs
api/programs/taller_mecanico/src/instructions/servicio/: mod.rs
api/programs/taller_mecanico/src/instructions/vehiculo/: mod.rs
api/programs/taller_mecanico/src/state/: cliente.rs  mod.rs  servicio.rs  taller_state.rs  vehiculo.rs
api/tests/: taller_mecanico.ts
web/: .env.local.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/clientes/: page.tsx
web/src/app/clientes/[pubkey]/: page.tsx
web/src/components/cliente/: ClienteCard.tsx  ClienteForm.tsx
web/src/components/layout/: Navbar.tsx
web/src/components/servicio/: ServicioCard.tsx  ServicioForm.tsx
web/src/components/ui/: Button.tsx  Input.tsx  Modal.tsx  Status.tsx
web/src/components/vehiculo/: VehiculoCard.tsx  VehiculoForm.tsx
web/src/constants/: index.ts
web/src/hooks/: useAnchorProgram.ts  useClientes.ts  useServicios.ts  useTallerState.ts  useVehiculos.ts
web/src/lib/: anchor.ts  idl.ts  utils.ts
web/src/providers/: QueryProvider.tsx  WalletProvider.tsx
web/src/types/: index.ts
(+1 files in other folders)
