[package]
name = "taller_mecanico"
version = "0.1.0"
description = "Taller Mecanico - Sistema de gestion on-chain para talleres mecanicos"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "taller_mecanico"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
